feature(#8): Add commit linting
- Should increase commit message quality across the board.

+semver: feature

--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,8 @@ Thumbs.db
 GPATH
 GRTAGS
 GTAGS
-.clang_complete
 compile_options.json
 
 # Build process
 build
-docs/html
-docs/latex
+node_modules
