--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@commitlint/config-conventional": "^7.5.0",
     "husky": "^1.3.1",
     "prettier": "^1.16.4"
+  },
+  "dependencies": {
+    "core-js": "^3.8.3"
   }
 }
