--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
-    "husky": "^1.3.1",
+    "husky": "^8.0.0",
     "prettier": "^1.16.4"
   },
   "dependencies": {
     "core-js": "^3.8.3"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
