enh(#54): Support multiple build systems
- Was already in place, just updated autosummary to reflect the actual generator
  used.

- Reworked some of the analysis bits to be more configurable.

- Fixed typo in LIBRA_CHECK_LANGUAGE default if you don't define it.

- Updates to docs throughout.

- Updates to most recent version of clang-XX executables searched for, to
  reflect that clang-20 is now available.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
           git submodule update --init --remote --recursive
 
-          PACKAGE_VERSION=$(sed -nE 's/.*LIBRA_VERSION ([0-9]+.[0-9]+.[0-9]+).*/\1/p' cmake/project.cmake)
+          PACKAGE_VERSION=$(sed -nE 's/.*LIBRA_VERSION ([0-9]+.[0-9]+.[0-9]+).*/\1/p' cmake/libra/project.cmake)
 
           if [ "${{ github.ref }}" = "refs/heads/devel" ]; then
             TAG_VERSION=${PACKAGE_VERSION}.beta
