Begin adding tests
- Long overdue, and will really help preventing regressions.

- Switch to using cmake mode for sphinx--way better docs!! Lots to still learn
  there too.

- Just for consuming as a cmake-pkg so far:

  - LIBRA_{C,CXX}_STANDARD
  - LIBRA_GLOBAL_{C,CXX}_STANDARD

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ docs = [
     "sphinx-tabs",
     "tomli",
     "sphinxcontrib-napoleon",
+    "sphinxcontrib-moderncmakedomain",
     "psutil",
     "sphinx-last-updated-by-git",
     "graphviz",
